Fixes test type examples in artifacts

--- a/artifacts/acvp_sub_sha.html
+++ b/artifacts/acvp_sub_sha.html
@@ -400,7 +400,7 @@
 
   <meta name="dct.creator" content="Celi, C., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsha-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-2-15" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-2" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using SHA1 and SHA2 with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using SHA1 and SHA2 with the ACVP specification." />
 
@@ -421,10 +421,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">February 15, 2017</td>
+  <td class="right">February 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: August 19, 2017</td>
+  <td class="left">Expires: August 5, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -445,7 +445,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 19, 2017.</p>
+<p>This Internet-Draft will expire on August 5, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -481,12 +481,12 @@
   </ul>
 
   <h1 id="rfc.section.1"><a href="#rfc.section.1">1.</a> Introduction</h1>
-<p id="rfc.section.1.p.1">The Automated Crypto Validation Protocol (ACVP) defines a mechanism to automatically verify the cryptographic implementation of a software or hardware crypto module.  The ACVP specification defines how a crypto module communicates with an ACVP server, including crypto capabilities negotiation, session management, authentication, vector processing and more.  The ACVP specification does not define algorithm specific JSON constructs for performing the crypto validation.  A series of ACVP sub-specifications define the constructs for testing individual crypto algorithms.  Each sub-specification addresses a specific class of crypto algorithms.  This sub-specification defines the JSON constructs for testing hash and MAC crypto algorithms using ACVP.</p>
+<p id="rfc.section.1.p.1">The Automated Crypto Validation Protocol (ACVP) defines a mechanism to automatically verify the cryptographic implementation of a software or hardware crypto module. The ACVP specification defines how a crypto module communicates with an ACVP server, including crypto capabilities negotiation, session management, authentication, vector processing and more. The ACVP specification does not define algorithm specific JSON constructs for performing the crypto validation. A series of ACVP sub-specifications define the constructs for testing individual crypto algorithms.  Each sub-specification addresses a specific class of crypto algorithms. This sub-specification defines the JSON constructs for testing hash and MAC crypto algorithms using ACVP.</p>
 <h1 id="rfc.section.1.1"><a href="#rfc.section.1.1">1.1.</a> Requirements Language</h1>
 <p id="rfc.section.1.1.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted in <a href="#RFC2119">RFC 2119</a> <cite title="NONE">[RFC2119]</cite>.</p>
 <h1 id="rfc.section.2"><a href="#rfc.section.2">2.</a> <a href="#caps_reg" id="caps_reg">Capabilities Registration</a></h1>
-<p id="rfc.section.2.p.1">ACVP requires crypto modules to register their capabilities.  This allows the crypto module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process.  This section describes the constructs for advertising support of hash algorithms to the ACVP server.</p>
-<p id="rfc.section.2.p.2">The algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message.  The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section.  The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message.  See the ACVP specification for details on the registration message.  Each algorithm capability advertised is a self-contained JSON object.  The following JSON values are used for hash algorithm capabilities:</p>
+<p id="rfc.section.2.p.1">ACVP requires crypto modules to register their capabilities. This allows the crypto module to advertise support for specific algorithms, notifying the ACVP server which algorithms need test vectors generated for the validation process. This section describes the constructs for advertising support of hash algorithms to the ACVP server.</p>
+<p id="rfc.section.2.p.2">The algorithm capabilities are advertised as JSON objects within the 'algorithms' value of the ACVP registration message. The 'algorithms' value is an array, where each array element is an individual JSON object defined in this section. The 'algorithms' value is part of the 'capability_exchange' element of the ACVP JSON registration message. See the ACVP specification for details on the registration message. Each algorithm capability advertised is a self-contained JSON object. The following JSON values are used for hash algorithm capabilities:</p>
 <h1 id="rfc.section.2.1"><a href="#rfc.section.2.1">2.1.</a> <a href="#hash_caps_reg" id="hash_caps_reg">HASH Algorithm Capabilities Registration</a></h1>
 <div id="rfc.table.1"/>
 <div id="caps_table"/>
@@ -540,8 +540,8 @@
 </ul>
 <p id="rfc.section.3.p.3">Other hash algorithms may be advertised by the ACVP elsewhere.</p>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
-<p id="rfc.section.4.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual crypto algorithm, such as SHA-1, SHA-224, SHA-256, etc.  This section describes the JSON schema for a test vector set used with hash crypto algorithms.</p>
-<p id="rfc.section.4.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.  The following table describes the JSON elements at the top level of the hierarchy.  </p>
+<p id="rfc.section.4.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation. A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client. Each test vector set represents an individual crypto algorithm, such as SHA-1, SHA-224, SHA-256, etc. This section describes the JSON schema for a test vector set used with hash crypto algorithms.</p>
+<p id="rfc.section.4.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client. The following table describes the JSON elements at the top level of the hierarchy. </p>
 <div id="rfc.table.2"/>
 <div id="vs_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -566,7 +566,7 @@
     </tr>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">The hash algorithm and mode used for the test vectors.  See <a href="#supported_algs">Section 3</a> for possible values.</td>
+      <td class="left">The hash algorithm and mode used for the test vectors. See <a href="#supported_algs">Section 3</a> for possible values.</td>
       <td class="left">value</td>
     </tr>
     <tr>
@@ -577,7 +577,7 @@
   </tbody>
 </table>
 <h1 id="rfc.section.4.1"><a href="#rfc.section.4.1">4.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
-<p id="rfc.section.4.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  The Test Group JSON object contains meta data that applies to all test vectors within the group.  The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
+<p id="rfc.section.4.1.p.1">The testGroups element at the top level in the test vector JSON object is an array of test groups. Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set. The Test Group JSON object contains meta data that applies to all test vectors within the group. The following table describes the secure hash JSON elements of the Test Group JSON object.</p>
 <div id="rfc.table.3"/>
 <div id="vs_tg_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -593,7 +593,7 @@
   <tbody>
     <tr>
       <td class="left">testType</td>
-      <td class="left">Test category type. For short message: 'short'. For long message: 'long'. Or for Monte Carlo: 'montecarlo'.</td>
+      <td class="left">Test category type. For Algorithm Functional Tests (also known as short and long message): 'functional'. Or for Monte Carlo: 'montecarlo'.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -613,12 +613,12 @@
       <td class="left">inEmpty</td>
       <td class="left">States that the empty message is included in the group</td>
       <td class="left">value</td>
-      <td class="left">No for short message tests. Yes for all others.</td>
+      <td class="left">No for functional message tests. Yes for all others.</td>
     </tr>
   </tbody>
 </table>
 <h1 id="rfc.section.4.2"><a href="#rfc.section.4.2">4.2.</a> <a href="#tcjs" id="tcjs">Test Case JSON Schema</a></h1>
-<p id="rfc.section.4.2.p.1">Each test group contains an array of one or more test cases.  Each test case is a JSON object that represents a single test vector to be processed by the ACVP client.  The following table describes the JSON elements for each secure hash test vector for the listed algorithms in <a href="#supported_algs">Section 3</a>.</p>
+<p id="rfc.section.4.2.p.1">Each test group contains an array of one or more test cases. Each test case is a JSON object that represents a single test vector to be processed by the ACVP client. The following table describes the JSON elements for each secure hash test vector for the listed algorithms in <a href="#supported_algs">Section 3</a>.</p>
 <div id="rfc.table.4"/>
 <div id="vs_tc_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -659,7 +659,7 @@
   </tbody>
 </table>
 <h1 id="rfc.section.4.3"><a href="#rfc.section.4.3">4.3.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
-<p id="rfc.section.4.3.p.1">After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
+<p id="rfc.section.4.3.p.1">After the ACVP client downloads and processes a vector set, it must send the response vectors back to the ACVP server. The following table describes the JSON object that represents a vector set response.</p>
 <div id="rfc.table.5"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
@@ -727,13 +727,13 @@
 <h1 id="rfc.appendix.A"><a href="#rfc.appendix.A">Appendix A.</a> <a href="#app-reg-ex" id="app-reg-ex">Example Secure Hash Capabilities JSON Object</a></h1>
 <p id="rfc.section.A.p.1">The following is a example JSON object advertising support for SHA-256.</p>
 <pre>
-	  	        	
-  	            	{
-  	                	"algorithm": "SHA-256",
-  	                	"inBit": "yes",
-  	               		"inEmpty": "yes"
-  	            	}
-  	            	
+
+{
+	"algorithm": "SHA-256",
+	"inBit": "yes",
+	"inEmpty": "yes"
+}
+
   	            </pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
 <p id="rfc.section.B.p.1">The following is an example JSON object for secure hash test vectors sent from the ACVP server to the crypto module.</p>
@@ -745,7 +745,7 @@
   	"algorithm": "SHA-512t224",
   	"testGroups": [
   	{
-  		"testType": "short",
+  		"testType": "functional",
   		"tests": [
   		{
   			"tcId": 0,
@@ -769,7 +769,7 @@
   	"algorithm": "SHA-256",
   	"testGroups": [
     {
-      	"testType": "long",
+      	"testType": "functional",
       	"tests": [
         {
           	"tcId": 2170,
@@ -830,15 +830,10 @@
     "testResults": [
     {
         "tcId": 2175,
-			"resultsArray": [
-  		{
-    		"count" : 0,
-			"md": "23d1f8655a7c9c2bc3bb56868483611e67cb1b3a"
-  		},
-  		{
-    		"count" : 1,
-			"md" : "d3d672efb8e569dc7a37c991a9fc51282412196f"
-  		}]
+        "resultsArray": [
+        	"md": "23d1f8655a7c9c2bc3bb56868483611e67cb1b3a",
+			"md": "d3d672efb8e569dc7a37c991a9fc51282412196f"
+      	]
     }]
 }
 	            </pre>
