--- a/artifacts/acvp_sub_sha3.html
+++ b/artifacts/acvp_sub_sha3.html
@@ -5,7 +5,7 @@
 <head profile="http://www.w3.org/2006/03/hcard http://dublincore.org/documents/2008/08/04/dc-html/">
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
 
-  <title>ACVP KECCAK (SHA3) and SHAKE JSON Specification</title>
+  <title>ACVP SHA3 and SHAKE JSON Specification</title>
 
   <style type="text/css" title="Xml2Rfc (sans serif)">
   /*<![CDATA[*/
@@ -392,6 +392,7 @@
 <link href="#rfc.appendix.A" rel="Chapter" title="A Example Secure Hash Capabilities JSON Object"/>
 <link href="#rfc.appendix.B" rel="Chapter" title="B Example Test Vectors JSON Object"/>
 <link href="#rfc.appendix.C" rel="Chapter" title="C Example Test Results JSON Object"/>
+<link href="#rfc.appendix.D" rel="Chapter" title="D Example Test Results JSON Object"/>
 <link href="#rfc.authors" rel="Chapter"/>
 
 
@@ -400,7 +401,7 @@
 
   <meta name="dct.creator" content="Celi, C., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subsha-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-2-15" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-2" />
   <meta name="dct.abstract" content="This document defines the JSON schema for using SHA3 and SHAKE with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for using SHA3 and SHAKE with the ACVP specification." />
 
@@ -421,10 +422,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">February 15, 2017</td>
+  <td class="right">February 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: August 19, 2017</td>
+  <td class="left">Expires: August 5, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -432,7 +433,7 @@
     </tbody>
   </table>
 
-  <p class="title">ACVP KECCAK (SHA3) and SHAKE JSON Specification<br />
+  <p class="title">ACVP SHA3 and SHAKE JSON Specification<br />
   <span class="filename">draft-ietf-acvp-subsha-00</span></p>
   
   <h1 id="rfc.abstract">
@@ -445,7 +446,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on August 19, 2017.</p>
+<p>This Internet-Draft will expire on August 5, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -475,6 +476,7 @@
 </ul><li>Appendix A.   <a href="#rfc.appendix.A">Example Secure Hash Capabilities JSON Object</a></li>
 <li>Appendix B.   <a href="#rfc.appendix.B">Example Test Vectors JSON Object</a></li>
 <li>Appendix C.   <a href="#rfc.appendix.C">Example Test Results JSON Object</a></li>
+<li>Appendix D.   <a href="#rfc.appendix.D">Example Test Results JSON Object</a></li>
 <li><a href="#rfc.authors">Author's Address</a></li>
 
 
@@ -527,14 +529,14 @@
       <td class="left">outMinLength</td>
       <td class="left">Minimum output length for SHAKE</td>
       <td class="left">value</td>
-      <td class="left">0-65536</td>
+      <td class="left">16-65536</td>
       <td class="left">Required for SHAKE</td>
     </tr>
     <tr>
       <td class="left">outMaxLength</td>
       <td class="left">Minimum output length for SHAKE</td>
       <td class="left">value</td>
-      <td class="left">0-65536</td>
+      <td class="left">16-65536</td>
       <td class="left">Required for SHAKE</td>
     </tr>
     <tr>
@@ -547,7 +549,7 @@
   </tbody>
 </table>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#supported_algs" id="supported_algs">Supported Hash Algorithms</a></h1>
-<p id="rfc.section.3.p.1">The following hash algorithms may be advertised by this ACVP compliant crypto module:</p>
+<p id="rfc.section.3.p.1">The following SHA3-based hash algorithms may be advertised by this ACVP compliant crypto module:</p>
 <p/>
 
 <ul>
@@ -613,7 +615,7 @@
   <tbody>
     <tr>
       <td class="left">testType</td>
-      <td class="left">Test category type. For short message: 'short'. For long message: 'long'. Or for Monte Carlo: 'montecarlo'. An option for SHAKE only is 'variable'.</td>
+      <td class="left">Test category type. For Algorithm Functional Tests (also known as short and long message): 'functional'. Or for Monte Carlo: 'montecarlo'. An option for SHAKE only is 'variable'.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -625,15 +627,15 @@
     </tr>
     <tr>
       <td class="left">inBit</td>
-      <td class="left">States that each test case in the group is bit-oriented (yes or no)</td>
-      <td class="left">value</td>
+      <td class="left">States that each test case in the group is bit-oriented</td>
+      <td class="left">yes, no</td>
       <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">inEmpty</td>
       <td class="left">States that the empty message is included in the group</td>
-      <td class="left">value</td>
-      <td class="left">No for short message tests. Yes for all others.</td>
+      <td class="left">yes, no</td>
+      <td class="left">No for functional tests. Yes for all others.</td>
     </tr>
   </tbody>
 </table>
@@ -660,14 +662,14 @@
     </tr>
     <tr>
       <td class="left">len</td>
-      <td class="left">Length of the message, seed</td>
+      <td class="left">Length of the message or seed</td>
       <td class="left">value</td>
-      <td class="left">Required for SHA3</td>
+      <td class="left">No</td>
     </tr>
     <tr>
       <td class="left">outLen</td>
       <td class="left">Length of the digest</td>
-      <td class="left">value</td>
+      <td class="left">16-65536</td>
       <td class="left">Required for SHAKE</td>
     </tr>
     <tr>
@@ -755,9 +757,9 @@
 <pre>
 
 {
-	"algorithm": "SHA-256",
+	"algorithm": "SHA3-256",
 	"inBit": "yes",
-		"inEmpty": "yes"
+	"inEmpty": "yes"
 }
 
   	            </pre>
@@ -768,10 +770,10 @@
 {
 	"acvVersion": "0.2",
 	"vsId": 1564,
-  	"algorithm": "SHA-512t224",
+  	"algorithm": "SHA3-512t224",
   	"testGroups": [
   	{
-  		"testType": "short",
+  		"testType": "functional",
   		"tests": [
   		{
   			"tcId": 0,
@@ -792,10 +794,10 @@
 {
   	"acvVersion": "0.2",
   	"vsId": 1564,
-  	"algorithm": "SHA-256",
+  	"algorithm": "SHA3-256",
   	"testGroups": [
     {
-      	"testType": "long",
+      	"testType": "functional",
       	"tests": [
         {
           	"tcId": 2170,
@@ -816,15 +818,15 @@
 {
     "acvVersion": "0.2",
     "vsId": 1564,
-    "algorithm": "SHA-1",
+    "algorithm": "SHA3-384",
     "testGroups": [
     {
         "testType": "montecarlo",
         "tests": [
         {
             "tcId": 2175,
-            "len": 20,
-            "seed": "331b04d56f6e3ed5af349bf1fd9f9591b6ec886e",
+            "len": 384,
+            "seed": "30850bd984b14ff5aff18993329268f45785a43cc5a837d45248c90d18e36c06cb3289cf4a661ace73b31a623c0b3ac7",
         }]
     }]
 }
@@ -856,18 +858,59 @@
     "testResults": [
     {
         "tcId": 2175,
-			"resultsArray": [
-  		{
-    		"count" : 0,
-			"md": "23d1f8655a7c9c2bc3bb56868483611e67cb1b3a"
-  		},
-  		{
-    		"count" : 1,
-			"md" : "d3d672efb8e569dc7a37c991a9fc51282412196f"
-  		}]
+		"resultsArray": [
+  			"md": "682d83f6d59bac119ade78ec06e0cd01ff504692fe1a8e5652313014a7ca17255e86b86093d90a868cc3a6a472304ebb",
+  			"md": "5cd9aaaba53392ad22df6ee42d5f22f3475416b52b85d61ccd4c59d34ecc07bd8973a4e3868cb324772c895f5184cc55"
+  		]
     }]
 }
 	            </pre>
+<h1 id="rfc.appendix.D"><a href="#rfc.appendix.D">Appendix D.</a> <a href="#app-variables-ex" id="app-variables-ex">Example Test Results JSON Object</a></h1>
+<p id="rfc.section.D.p.1">The following is a example JSON object for the SHAKE Variable test sent from the ACVP server to the crypto module.</p>
+<pre>
+
+{
+  	"acvVersion": "0.2",
+  	"vsId": 1564,
+  	"algorithm": "SHAKE-128",
+  	"testGroups": [
+    {
+      	"testType": "variable",
+      	"tests": [
+        {
+          	"tcId": 3456,
+          	"inputLen": 128,
+          	"msg": "7a4c48eb710299e4ff2be3f446327a6f",
+          	"outputLen": 16
+        },
+        {
+          	"tcId": 3457,
+          	"inputLen": 128,
+          	"msg": "b16f331b3a0cf4507124b4358f9d15f5",
+          	"outputLen": 144
+        }]
+    }]
+}
+				</pre>
+<p id="rfc.section.D.p.2">The following is a example JSON object for the SHAKE Variable test results sent from the crypto module to the ACVP server.</p>
+<pre>
+
+{
+    "acvVersion": "0.2",
+    "vsId": 1564,
+    "testResults": [
+    {
+        "tcId": 2170,
+        "outputLen": 80
+        "md": "c60048b8ad8fc71e50ff"
+    },
+    {
+        "tcId": 2171,
+        "outputLen": 144
+        "md": "cfc6ed48bb2e61e0a48222d34a424ce9fdbe"
+    }]
+}
+				</pre>
 <h1 id="rfc.authors">
   <a href="#rfc.authors">Author's Address</a>
 </h1>
