--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -813,7 +813,7 @@
     <tr>
       <td class="left">AES-GCM</td>
       <td class="left">Range, minimum of zero, maximum less than or equal to 65536.  When not zero, value should be divisible by 128. Should indicate "true" for "supportsNonBlockBoundaryPtLen" when implementation allows.</td>
-      <td class="left">Array one to three values between 8 and 1024</td>
+      <td class="left">Range, minimum of 8, maximum of 1024</td>
       <td class="left">Array of supported values of: 32, 64, 96, 104, 112, 120, 128</td>
       <td class="left">Range, minimum of zero, maximum less than or equal to 65536.  When not zero, value should be divisible by 128.  Should indicate "true" for "supportsNonBlockBoundaryAadLen" when implementation allows.</td>
     </tr>
