Updates for typos, HMACVS

--- a/artifacts/acvp_sub_sha.html
+++ b/artifacts/acvp_sub_sha.html
@@ -535,8 +535,8 @@
   <li>SHA-256</li>
   <li>SHA-384</li>
   <li>SHA-512</li>
-  <li>SHA-512t224</li>
-  <li>SHA-512t256</li>
+  <li>SHA-512/224</li>
+  <li>SHA-512/256</li>
 </ul>
 <p id="rfc.section.3.p.3">Other hash algorithms may be advertised by the ACVP elsewhere.</p>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
@@ -742,7 +742,7 @@
 {
 	"acvVersion": "0.2",
 	"vsId": 1564,
-  	"algorithm": "SHA-512t224",
+  	"algorithm": "SHA-512/224",
   	"testGroups": [
   	{
   		"testType": "functional",
