--- a/artifacts/acvp_sub_sha3.html
+++ b/artifacts/acvp_sub_sha3.html
@@ -770,7 +770,7 @@
 {
 	"acvVersion": "0.2",
 	"vsId": 1564,
-  	"algorithm": "SHA3-512t224",
+  	"algorithm": "SHA3-512",
   	"testGroups": [
   	{
   		"testType": "functional",
