Fixed errors related to ranges of supported parameters
This PR fixes several errors in the spec and makes improvements in how
ranges of parameters are handled. The examples are now consistent among
each other, so that if a particular parameter is set to zero, the
corresponding data field is not tested.

--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -400,7 +400,7 @@
 
   <meta name="dct.creator" content="Vassilev, A., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subdrbg-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2016-12-27" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-3-13" />
   <meta name="dct.abstract" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
 
@@ -421,10 +421,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">December 27, 2016</td>
+  <td class="right">March 13, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: June 30, 2017</td>
+  <td class="left">Expires: September 14, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -445,11 +445,11 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on June 30, 2017.</p>
+<p>This Internet-Draft will expire on September 14, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
-<p>Copyright (c) 2016 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
+<p>Copyright (c) 2017 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
 
   
@@ -751,10 +751,10 @@
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">entropyInputLen</td>
-      <td class="left">the bit length of the entropy input. See <a href="#caps_table">Table 3</a> notes below.</td>
-      <td class="left">value</td>
-      <td class="left">at least the maximum security strength supported by the mechanism/option, larger values are optional</td>
+      <td class="left">entropyInputRange</td>
+      <td class="left">the supported bit lengths of the entropy input. See <a href="#caps_table">Table 3</a> notes below.</td>
+      <td class="left">range</td>
+      <td class="left">min - at least the maximum security strength supported by the mechanism/option, max - larger values are optional, step - increment.</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -765,24 +765,10 @@
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">nonceLen</td>
+      <td class="left">nonceLenRange</td>
       <td class="left">.See <a href="#caps_table">Table 3</a> notes below.</td>
-      <td class="left">value</td>
-      <td class="left">at least one half of the maximum security strength supported by the mechanism/option. Longer nonces are permitted.</td>
-      <td class="left">Yes</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">persoStringLen</td>
-      <td class="left">.See <a href="#caps_table">Table 3</a> notes below.</td>
-      <td class="left">Array</td>
-      <td class="left">set to zero or the maximum security strength supported by the mechanism/option.</td>
+      <td class="left">range</td>
+      <td class="left">min - at least one half of the maximum security strength supported by the mechanism/option; max: - longer nonces are permitted, step - increment</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -793,10 +779,24 @@
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">additionalInputLen</td>
+      <td class="left">persoStringLenRange</td>
       <td class="left">.See <a href="#caps_table">Table 3</a> notes below.</td>
-      <td class="left">Array</td>
-      <td class="left">set to zero or the maximum security strength supported by the mechanism/option.</td>
+      <td class="left">range</td>
+      <td class="left">min - the maximum security strength supported by the mechanism/option; max - largest supported length, step - increment to calculate all supported lengths. Set all to zero (0) if not supported.</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+      <td class="left"/>
+    </tr>
+    <tr>
+      <td class="left">additionalInputLenRange</td>
+      <td class="left">.See <a href="#caps_table">Table 3</a> notes below.</td>
+      <td class="left">range</td>
+      <td class="left">min - the maximum security strength supported by the mechanism/option; max - largest supported length, step - increment to calculate all supported lengths; set all to zero (0) if not supported.</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -821,8 +821,8 @@
 <p id="rfc.section.2.3.p.5">Note 4: For ctrDRBG implementations, at least one of the derivation function options shall be set depending on the one actually used or both</p>
 <p id="rfc.section.2.3.p.6">Note 5: All DRBGs are tested at their maximum supported security strength so this is the minimum bit length of the entropy input that ACVP will accept.  The maximum supported security strength is also the default value for this input. Longer entropy inputs are permitted, with the following exception: for ctrDRBG with no df, the bit length must equal the seed length.</p>
 <p id="rfc.section.2.3.p.7">Note 6: ctrDRBG with no derivation function (ctrDRBGWithoutDerFunc) does not use a nonce; the nonce values, if supplied, will be ignored for this case. The default nonce bit length is one-half the maximum security strength supported by the mechanism/option.</p>
-<p id="rfc.section.2.3.p.8">Note 7: ACVP has two default bit length values for persoString: zero (0) and maximum supported supported security strength except in the case of ctrDRBGWithoutDerFunc, where the second personalization string length must be less than or equal to the seed length.  If the implementation only supports one personalization string length, then set both numbers equal to each other.  If the implementation does not use a persoString, set both numbers to 0 (zero). </p>
-<p id="rfc.section.2.3.p.9">Note 8: The addtionalInput configuration and restrictions are the same as those for the persoString.Similarly, for the default addtionalInput bit legths - same as those for persoString lengths.</p>
+<p id="rfc.section.2.3.p.8">Note 7: ACVP allows bit length values for persoString ranging from the maximum supported security strength except in the case of ctrDRBGWithoutDerFunc, where the second personalization string length must be less than or equal to the seed length.  If the implementation only supports one personalization string length, then set only that value as the range min and max and set the step to zero (0)..  If the implementation does not use a persoString, set all range parameters (min, max, step) to 0 (zero). </p>
+<p id="rfc.section.2.3.p.9">Note 8: The addtionalInput configuration and restrictions are the same as those for the persoString.</p>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual algorithm, such as Hash_DRBG, etc.  This section describes the JSON schema for a test vector set used with DRBG algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.  The following table describes the JSON elements at the top level of the hierarchy.  </p>
@@ -963,8 +963,8 @@
     </tr>
     <tr>
       <td class="left">persoStringLen</td>
-      <td class="left">personalization string length</td>
-      <td class="left">value </td>
+      <td class="left">personalization string length; set to 0 (zero) if not used/supported</td>
+      <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -975,8 +975,8 @@
     </tr>
     <tr>
       <td class="left">additonalInputLen</td>
-      <td class="left">additional input length</td>
-      <td class="left">value </td>
+      <td class="left">additional input length; set tp 0 (zero) if not used/supported</td>
+      <td class="left">value</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -1224,10 +1224,18 @@
                 "prereqVals": [{"algorithm": "TDES", "valValue": "same"}],
                 "predResistanceEnabled": "yes",
                 "reseedImplemented" : "yes",
-                "entropyInputLen":"112",
-                "nonceLen":"56",
-                "persoStringLen":"0",
-                "additionalInputLen":"0",
+                "entropyInputRange":{ "min": 112,
+                                "max": 256,
+                                "step" : 144},
+                "nonceLenRange": {"min" : 56,
+                                "max" : 56,
+                                "step" : 0},
+                "persoStringLenRange": {"min": 112,
+                                "max" : 112,
+                                "step" : 0},
+                "additionalInputLenRange":{ "min": 112,
+                                "max" : 112,
+                                "step" : 0},
                 "returnedBitsLen":"256"
             }
             </pre>
@@ -1240,10 +1248,18 @@
                 "prereqVals": [{"algorithm": "AES", "valValue": "1234"}],
                 "predResistanceEnabled": "yes",
                 "reseedImplemented" : "yes",
-                "entropyInputLen":"128",
-                "nonceLen":"64",
-                "persoStringLen":"0",
-                "additionalInputLen":"0",
+                "entropyInputRange":{ "min": 128,
+                                "max": 256,
+                                "step" : 128},
+                "nonceLenRange": {"min" : 64,
+                                "max" : 64,
+                                "step" : 0},
+                "persoStringLenRange": {"min": 128,
+                                "max" : 128,
+                                "step" : 0},
+                "additionalInputLenRange":{ "min": 128,
+                                "max" : 128,
+                                "step" : 0},
                 "returnedBitsLen":"512"
             }
             </pre>
@@ -1255,10 +1271,18 @@
                 "prereqVals": [{"algorithm": "AES", "valValue": "1234"}, {"algorithm": "SHA", "valValue": "5678"}],
                 "predResistanceEnabled": "yes",
                 "reseedImplemented" : "yes",
-                "entropyInputLen":"256",
-                "nonceLen":"128",
-                "persoStringLen":"0",
-                "additionalInputLen":"0",
+                 "entropyInputRange":{ "min": 256,
+                                "max": 512,
+                                "step" : 1},
+                "nonceLenRange": {"min" : 128,
+                                "max" : 256,
+                                 "step" : 128},
+                "persoStringLenRange": {"min": 256,
+                                 "max" : 512,
+                                 "step" : 1},
+              "additionalInputLenRange":{ "min": 256,
+                                 "max" : 512,
+                                 "step" : 1},
                 "returnedBitsLen":"1024"
             }
             </pre>
@@ -1270,10 +1294,18 @@
                 "prereqVals": [{"algorithm": "AES", "valValue": "1234"}, {"algorithm": "HMAC", "valValue": "9012"}],
                 "predResistanceEnabled": "yes",
                 "reseedImplemented" : "yes",
-                "entropyInputLen":"256",
-                "nonceLen":"128",
-                "persoStringLen":"0",
-                "additionalInputLen":"0",
+                "entropyInputRange":{ "min": 256,
+                                 "max": 256,
+                                 "step" : 0},
+                "nonceLenRange": {"min" : 128,
+                                 "max" : 128,
+                                 "step" : 0},
+                "persoStringLenRange": {"min": 256,
+                                 "max" : 256,
+                                 "step" : 0},
+               "additionalInputLenRange":{ "min": 256,
+                                 "max" : 256,
+                                 "step" : 0},
                 "returnedBitsLen":"1024"
             }
             </pre>
@@ -1287,11 +1319,11 @@
                   "mode": "3KeyTDEA",
                   "derFunc":"yes",
                   "predResistance": "yes",
-                  "entropyInputLen":"128",
-                  "nonceLen":"64",
-                  "persoStringLen":"0",
-                  "additionalInputLen":"0",
-                  "returnedBitsLen":"512",                  
+                  "entropyInputLen":"112",
+                  "nonceLen":"56",
+                  "persoStringLen":"112",
+                  "additionalInputLen":"112",
+                  "returnedBitsLen":"256",                  
                   "testGroups": [
                     {
                       "type": "long",
@@ -1331,8 +1363,8 @@
                   "predResistance": "yes",
                   "entropyInputLen":"256",
                   "nonceLen":"128",
-                  "persoStringLen":"0",
-                  "additionalInputLen":"0",
+                  "persoStringLen":"256",
+                  "additionalInputLen":"256",
                   "returnedBitsLen":"1024",                  
                   "testGroups": [
                     {
@@ -1382,23 +1414,23 @@
                       "tests": [
                         {
                           "tcId": "2151",
-                          "entropyInput":"b37f442929f21306d8750a82fc6b362a574babd3ed60f19a35c37e469a5f14bf",
-                          "nonce":"c3283de7bc8395b6acccbb5ea5fa96bb",
-                          "persoString":"5674ab88573f76754c9c23251ced43004e4e0839b8238dc02738c52fd4f0c6d2",
-                          "additionalInput":"54b90323d3985459897b6743006bc0b573c2374512bd4af306e094c791b3fe83",
-                          "entropyInputPR": "c7825bcd4d93f29759e605a71cbd7d926ad7ea5cef223e0c18ef9f6fbd60ca59",
-                          "additionalInput" : "589b34ca088e88ebc0013ebe1371ba59981a7dc28a430f1878dbea58da48bbc8",
-                          "entropyInputPR" : "3ab094c46749b53452230b757e06a0e73ae98154fee23b219b2d2cb3799f3ddd"
+                          "entropyInput":"ae0a3acd541d0d582a8510f3028caa143fe1e5226a8469d40b979d3a0d1bbe69",
+                          "nonce":"786f03ad697332d74fad7a14604cee44",
+                          "persoString":"",
+                          "additionalInput":"",
+                          "entropyInputPR": "4852aed7c47fd305aa680a6557d2f6e4112342a04eb91ed9f843671d0673cecd",
+                          "additionalInput" : "",
+                          "entropyInputPR" : "8b8a35a12e2d112685258742a9ad81931595fb06a7443329317e4eab9814e888"
                           },
                         {
                           "tcId": "2152",
-                          "entropyInput" : "453ee7be8e0c38345bc5bd41b3fc966bee51865cbdefef8de88c2e2f98e0d89c",
-                          "nonce": "caab6531ed1d096668e7d7e5bb8f306b",
-                          "persoString" : "ff6f535e2b41be7c17d4cfc0f14868ab838b739e643d269d624a1a0637152d78",
-                          "additionalInput" : "725ae7b8d850fbfda11ec61ff42ce3b886cff4ab2adeffc2cb9bc23d5dc59db9",
-                          "entropyInputPR" : "6a126e70a096b6e7ac6a717a6becbe98e1dee0c2181c5353701fcead24b0fe4e",
-                          "additionalInput" : "ff3cd93f88072a2fc8cd0e4a4317a97b504f8fc6beb6753214455b12f0044dfc",
-                          "entropyInputPR" : "dba352082e876c90f5a1411670b47610d7c3b6116b00a1d0056702bb8fa3b78e"
+                          "entropyInput" : "26d8c9a9b982cd7016c9208fe95b2f4003e0ebf84c1e80a4087f2bc3e0fc5674",
+                          "nonce": "36dff124f908a95a022edf615618cd31",
+                          "persoString" : "",
+                          "additionalInput" : "",
+                          "entropyInputPR" : "648bbdc4d40571905c69e7e2b15e36e08c812a6c509cef68bf75281e87f7a154",
+                          "additionalInput" : "",
+                          "entropyInputPR" : "fff51d05b1349506c354a0e6ee01edcff21c509dff5cbb582c8fdc01d6e8bd5b"
                         }
                       ]
                     }
@@ -1449,11 +1481,11 @@
                     "testResults": [
                         {
                             "tcId": "2151",
-                            "returnedBits ": "3bcb4371e388a8c453f16fb48e46859b7cbd1b8307681083fb8c10e7a6ea77ff89f6ce2ab9efff8ea11e95117e577a139e5a2f99786282fefadf07c13d7ceb123d81f93d262ad84d9d1589ea6bb760a0cabd75285e29a11bb97a8ff3317d839639866195c3364c98f250ce97c974c06805821e66ce214333d275d8a01a6c69a7"
+                            "returnedBits ": "1af967534c670271e26c9b991ec975b78c84623853cd531368f5b2e81f015f97ffbb8cd4533d4354ed432fbdf8025f04786745fd006e173f34e6f01e136bd9b4db2b96919dfa12e8deecf7b7c72b1d329afa99c29e844b27ee34d468a4b20b5739c00ad405943aeb5084285468765190112c5e44756770479552f2f2913ed362"
                         },
                        {
                             "tcId": "2152",
-                            "returnedBits": "0302cb504af55d89d8aa03a05d5cd9969c0650e32c27d32dc5db991b95297885a593cb81ee2fbfea273f61830fa0d548c1d89ff1d8495a9fd4dee2c7ddc075620bec06d3641232b4433d229f2b4a791a11709fe3d6fe4f809f97d113bdaebe255223e6e5914296886861d28331ea702bf05f63a8fd62b97a845de43012ed4a55"
+                            "returnedBits": "8a74a8c31ea4e6e62f8a77b45da8ec9d8b75e6813f15327c5beb8cb4b56b15e85f95ace34826f8da9048be7c800b33d6c4d3c6558b3e2e0ccfe867a2c6107dc7bacf513017c1a5bcb65ce16ed49aefe764ea7a13d36ceb7f9c443a0cb81f55abcc0c7b2d7d97858ee0b237a72364e826dd6b25df84914f2b354e03fd7fea758e"
                        }
                     ]
                 }
