Rolling back specific "range" changes regarding AES-GCM and XTS.  The inputs previously changes aren't taking in "ranges" of values, but literals.

--- a/artifacts/acvp_sub_symmetric.html
+++ b/artifacts/acvp_sub_symmetric.html
@@ -619,7 +619,7 @@
     <tr>
       <td class="left">ptLen</td>
       <td class="left">The supported plaintext lengths in bits.   This varies depending on the algorithm type, for additional details see <a href="#data_lengths">Section 2.3</a></td>
-      <td class="left">range</td>
+      <td class="left">range or array</td>
       <td class="left">0-65536</td>
       <td class="left">No</td>
     </tr>
@@ -633,7 +633,7 @@
     <tr>
       <td class="left">ivLen</td>
       <td class="left">The supported IV/Nonce lengths in bits, see <a href="#data_lengths">Section 2.3</a></td>
-      <td class="left">range</td>
+      <td class="left">array</td>
       <td class="left">8-1024</td>
       <td class="left">Yes</td>
     </tr>
@@ -675,7 +675,7 @@
     <tr>
       <td class="left">aadLen</td>
       <td class="left">The supported AAD lengths in bits for AEAD algorithms, </td>
-      <td class="left">range</td>
+      <td class="left">range or array</td>
       <td class="left">0-65536</td>
       <td class="left">Yes</td>
     </tr>
@@ -743,34 +743,6 @@
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">supportsNonBlockBoundaryPtLen</td>
-      <td class="left">Indicates the algorithm implementation supports Plain text lengths outside of the block boundary.  Example, 112 bits for AES which operates on a 128 bit block.</td>
-      <td class="left">bool</td>
-      <td class="left">true, false</td>
-      <td class="left">Yes</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
-      <td class="left">supportsNonBlockBoundaryAadLen</td>
-      <td class="left">Indicates the algorithm implementation supports AAD lengths outside of the block boundary.</td>
-      <td class="left">bool</td>
-      <td class="left">true, false</td>
-      <td class="left">Yes</td>
-    </tr>
-    <tr>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-      <td class="left"/>
-    </tr>
-    <tr>
       <td class="left">ctrSource</td>
       <td class="left">The source of the counter for counter-mode</td>
       <td class="left">value</td>
@@ -812,10 +784,10 @@
     </tr>
     <tr>
       <td class="left">AES-GCM</td>
-      <td class="left">Range, minimum of zero, maximum less than or equal to 65536.  When not zero, value should be divisible by 128. Should indicate "true" for "supportsNonBlockBoundaryPtLen" when implementation allows.</td>
-      <td class="left">Range, minimum of 8, maximum of 1024</td>
+      <td class="left">Array to include, if supported,  zero, two values divisible by 128 and two values not divisible by 128</td>
+      <td class="left">Array one to three values between 8 and 1024</td>
       <td class="left">Array of supported values of: 32, 64, 96, 104, 112, 120, 128</td>
-      <td class="left">Range, minimum of zero, maximum less than or equal to 65536.  When not zero, value should be divisible by 128.  Should indicate "true" for "supportsNonBlockBoundaryAadLen" when implementation allows.</td>
+      <td class="left">Array to include, if supported,  zero, two values divisible by 128 and two values not divisible by 128</td>
     </tr>
     <tr>
       <td class="left"/>
@@ -826,7 +798,7 @@
     </tr>
     <tr>
       <td class="left">AES-XTS</td>
-      <td class="left">Range, minimum of zero, maximum less than or equal to 2^20.  When not zero, value should be divisible by 128.  Should indicate "true" for "supportsNonBlockBoundaryPtLen" when implementation allows.</td>
+      <td class="left">Array to include, if supported,  zero, two values divisible by 128 and two values not divisible by 128. Followed by the maximum data length not to exceed 2^20</td>
       <td class="left">N/A</td>
       <td class="left">N/A</td>
       <td class="left">N/A</td>
