--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -418,7 +418,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.2" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-3-13" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-3-14" />
   <meta name="dct.abstract" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
   <meta name="description" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
 
@@ -439,10 +439,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">March 13, 2017</td>
+  <td class="right">March 14, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: September 14, 2017</td>
+  <td class="left">Expires: September 15, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -463,7 +463,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 14, 2017.</p>
+<p>This Internet-Draft will expire on September 15, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -858,8 +858,6 @@ Accept:
 ],
 "ivGen" : "internal",
 "ivGenMode" : "8.2.1",
-"supportsNonBlockBoundaryAadLen" : true
-"supportsNonBlockBoundaryPtLen" : true,
 "keyLen" : [
             128,
             256
@@ -867,18 +865,18 @@ Accept:
 "tagLen" : [
             96
                ],
-"ivLen" : {
-            "min" : 96,
-            "max" : 96
-               },
-"ptLen" : {
-            "min" : 0,
-            "max" : 256
-               },
-"aadLen" : {
-            "min" : 128,
-            "max" : 256
-               }
+"ivLen" : [
+             96
+               ],
+ "ptLen" : [
+             0,
+             128,
+             136
+               ],
+ "aadLen" : [
+             128,
+             136
+               ]
           }
        ]
    }
