Fixed parameter range errors, improved examples
Fixed parameter range errors in DRBG capabilities specification. Now all
possible configurations can be modeled with the range construct. Added
additional discussion to cover special cases, e.g. when an
implementation can work with or without a given parameter and the
paramter is subject to specific constraints.

--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -400,7 +400,7 @@
 
   <meta name="dct.creator" content="Vassilev, A., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subdrbg-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-3-13" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-3-14" />
   <meta name="dct.abstract" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
 
@@ -421,10 +421,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">March 13, 2017</td>
+  <td class="right">March 14, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: September 14, 2017</td>
+  <td class="left">Expires: September 15, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -445,7 +445,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 14, 2017.</p>
+<p>This Internet-Draft will expire on September 15, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -821,7 +821,7 @@
 <p id="rfc.section.2.3.p.5">Note 4: For ctrDRBG implementations, at least one of the derivation function options shall be set depending on the one actually used or both</p>
 <p id="rfc.section.2.3.p.6">Note 5: All DRBGs are tested at their maximum supported security strength so this is the minimum bit length of the entropy input that ACVP will accept.  The maximum supported security strength is also the default value for this input. Longer entropy inputs are permitted, with the following exception: for ctrDRBG with no df, the bit length must equal the seed length.</p>
 <p id="rfc.section.2.3.p.7">Note 6: ctrDRBG with no derivation function (ctrDRBGWithoutDerFunc) does not use a nonce; the nonce values, if supplied, will be ignored for this case. The default nonce bit length is one-half the maximum security strength supported by the mechanism/option.</p>
-<p id="rfc.section.2.3.p.8">Note 7: ACVP allows bit length values for persoString ranging from the maximum supported security strength except in the case of ctrDRBGWithoutDerFunc, where the second personalization string length must be less than or equal to the seed length.  If the implementation only supports one personalization string length, then set only that value as the range min and max and set the step to zero (0)..  If the implementation does not use a persoString, set all range parameters (min, max, step) to 0 (zero). </p>
+<p id="rfc.section.2.3.p.8">Note 7: ACVP allows bit length values for persoString ranging from the maximum supported security strength except in the case of ctrDRBGWithoutDerFunc, where the second personalization string length must be less than or equal to the seed length.  If the implementation only supports one personalization string length, then set only that value as the range min and max and set the step to zero (0)..  If the implementation does not use at all a persoString, set all range parameters (min, max, step) to 0 (zero). If the implementation can work with and without persoString, set the min to zero (0), set the max to at least the maximum supported strength and set the step equal to at least the maximum supported strength to avoid testing lengths less than that.</p>
 <p id="rfc.section.2.3.p.9">Note 8: The addtionalInput configuration and restrictions are the same as those for the persoString.</p>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
 <p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual algorithm, such as Hash_DRBG, etc.  This section describes the JSON schema for a test vector set used with DRBG algorithms.</p>
@@ -1263,7 +1263,7 @@
                 "returnedBitsLen":"512"
             }
             </pre>
-<p id="rfc.section.A.p.3">The following is a example JSON object advertising support for hashDRBG with AES-256.</p>
+<p id="rfc.section.A.p.3">The following is a example JSON object advertising support for hashDRBG with AES-256. Note that in this example the implementation works with or without additional input and personalization data.</p>
 <pre>
             {
                 "algorithm": "hashDRBG",
@@ -1277,12 +1277,12 @@
                 "nonceLenRange": {"min" : 128,
                                 "max" : 256,
                                  "step" : 128},
-                "persoStringLenRange": {"min": 256,
+                "persoStringLenRange": {"min": 0,
                                  "max" : 512,
-                                 "step" : 1},
-              "additionalInputLenRange":{ "min": 256,
+                                 "step" : 256},
+              "additionalInputLenRange":{ "min": 0,
                                  "max" : 512,
-                                 "step" : 1},
+                                 "step" : 256},
                 "returnedBitsLen":"1024"
             }
             </pre>
