Updated to incorporate discussion from Issue#9 into the example. Additional documentation will be necessary to describe this input if accepted by the group.

--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -817,7 +817,6 @@ each message.
 <div id="rfc.figure.7"/>
 <div id="xml_json3"/>
 <pre>
-
 POST /validation/acvp/register HTTP1.2
 User Agent:
 Host: www.acvp.nist.gov
@@ -830,16 +829,32 @@ Accept:
 "production" : "no",
 "encryptAtRest" : "yes",
 "oeInformation" : {
-    "vendorName" : "Cisco",
-    "vendorURL" : "www.cisco.com",
-    "contact" : "John Doe",
-    "contactEmail" : "johndoe@cisco.com",
-    "moduleName" : "Cisco ACV Test Module 1.0",
-    "moduleType" : "Software",
+    "vendor": {
+        "name" : "Cisco",
+        "website": "www.cisco.com",
+        "contact": [{
+            "name" : "John Doe",
+            "email" : "johndoe@cisco.com"
+        }]
+    },
+    "module": {
+      "name": "Cisco ACV Test Module",
+      "version": "1.0",
+      "type": "Software"
+    },
     "operationalEnvironment" : {
-        "moduleVersion" : "1.0",
-        "processor" : "Intel Woodcrest",
-        "operatingSystem" : "Linux 3.1"
+        "dependencies" : [{
+            "type" : "software",
+            "name" : "Linux 3.1",
+            "cpe"  : "cpe-2.3:o:ubuntu:linux:3.1"
+        },{
+            "type" : "processor",
+            "manufacturer" : "Intel",
+            "family" : "ARK",
+            "name" : "Xeon",
+            "series" : "5100",
+            "features" : [ "rdrand" ]
+        }]
     },
     "implementationDescription" : "Sample crypto module for demonstrating ACV protocol."
 },
@@ -878,7 +893,6 @@ Accept:
        ]
    }
 }
-
            </pre>
 <p class="figure">Figure 7</p>
 <p id="rfc.section.11.2.p.4">Successful response from server is 200 OK and a set of vector set identifiers.  The extensions section is optional and can be implementation specific for value add. Follow on versions could include protocol information.</p>
