Fix erros in DRBG spec
Fixes errors in the spec caught by Norm. See #65 for details.

--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -400,7 +400,7 @@
 
   <meta name="dct.creator" content="Vassilev, A., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-subdrbg-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2017-3-14" />
+  <meta name="dct.issued" scheme="ISO8601" content="2017-3-15" />
   <meta name="dct.abstract" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
   <meta name="description" content="This document defines the JSON schema for testing DRBG implementations from SP 800-90A  with the ACVP specification." />
 
@@ -421,10 +421,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">March 14, 2017</td>
+  <td class="right">March 15, 2017</td>
 </tr>
 <tr>
-  <td class="left">Expires: September 15, 2017</td>
+  <td class="left">Expires: September 16, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -445,7 +445,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on September 15, 2017.</p>
+<p>This Internet-Draft will expire on September 16, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -1103,7 +1103,7 @@
       <td class="left"/>
     </tr>
     <tr>
-      <td class="left">entropyInputPR</td>
+      <td class="left">entropyInput</td>
       <td class="left">value of the entropy input to use in prediction resistance tests</td>
       <td class="left">value</td>
       <td class="left">No</td>
@@ -1333,20 +1333,24 @@
                           "entropyInput":"78aac2cb444594e29dc97b0195b5",
                           "nonce":"41ef9c67ffe438",
                           "persoString":"b8e84de200a9239a043a7a9a6a03",
-                          "additionalInput":"f1e8edf002b331ec49ec0c1f18fa",
-                          "entropyInputPR": "6cd4096638bbaeda28289582a10d",
-                          "additionalInput" : "f5357737023e3304508a00b3ba02",
-                          "entropyInputPR" : "a0cdf5c1c670fd7b65a4f0a899e4"
+                          "predResistsnceInput" : [
+                             {"additionalInput":"f1e8edf002b331ec49ec0c1f18fa",
+                               "entropyInput": "6cd4096638bbaeda28289582a10d"},
+                            {"additionalInput" : "f5357737023e3304508a00b3ba02",
+                             "entropyInput" : "a0cdf5c1c670fd7b65a4f0a899e4"}
+                            ]
                           },
                         {
                           "tcId": "1816",
                           "entropyInput" : "b8ab88b9c5fda8544b90a043684e",
                           "nonce": "f1bcc6ff60dd37",
                           "persoString" : "018c1f9d22f3c7f701a5f1cab07d",
-                          "additionalInput" : "356a6e908bfce2d660f20f3fbd1e",
-                          "entropyInputPR" : "bed693401bfd53ce4c36c2233ada",
-                          "additionalInput" : "4321b3ab3a0ce88e02bdcd0306d9",
-                          "entropyInputPR" : "a632ef16f20da17f02e484df4a41"
+                          "predResistsnceInput" : [
+                             {"additionalInput" : "356a6e908bfce2d660f20f3fbd1e",
+                              "entropyInput" : "bed693401bfd53ce4c36c2233ada"},
+                             {"additionalInput" : "4321b3ab3a0ce88e02bdcd0306d9",
+                              "entropyInput" : "a632ef16f20da17f02e484df4a41"}
+                          ]
                         }
                       ]
                     }
@@ -1375,27 +1379,31 @@
                           "entropyInput":"ee3392c5f3de6f3f8c4f28d852afacd2cbaa89ed48d1c5d4311662962aa70a98",
                           "nonce":"b991a820fac75fd02642ad8fa651eda4",
                           "persoString":"30f3a50b0e2309dab93ea2aa095e5df8e4b2a42690572b31e53fb79a195481e5",
-                          "additionalInput":"4ea46abe95b2e4184113f908ae30123207d481908b7af7ef348657bbf3b4a002",
-                          "entropyInputPR": "e4413a2e404f12c644b0b1d7a49a0fbf3d8703d571ffd02168c11b4ade6fc903",
-                          "additionalInput" : "61b7204c8fef294f2a9f2e73a83a8a7a04c38e3b3eaaed1b920abfceab912492",
-                          "entropyInputPR" : "968ea185d1439fa2d67eb55ac93ba596b1ea679de7c6e44f80dc6f213455f1ed"
+                          "predResistsnceInput" : [
+                             {"additionalInput":"4ea46abe95b2e4184113f908ae30123207d481908b7af7ef348657bbf3b4a002",
+                               "entropyInput": "e4413a2e404f12c644b0b1d7a49a0fbf3d8703d571ffd02168c11b4ade6fc903"},
+                             {"additionalInput" : "61b7204c8fef294f2a9f2e73a83a8a7a04c38e3b3eaaed1b920abfceab912492",
+                              "entropyInput" : "968ea185d1439fa2d67eb55ac93ba596b1ea679de7c6e44f80dc6f213455f1ed"}
+                            ]
                           },
                         {
                           "tcId": "2112",
                           "entropyInput" : "a0ace75784b97224de2957e5f60dc85b25331fcf7901f37418d3c9de17ed4261",
                           "nonce": "b671308068fc7909a360c772f62a4c5e",
                           "persoString" : "338d5f2bd93262da154385e9ed90b7862e3c892f13e1d7d19924b2eb8b3bab21",
-                          "additionalInput" : "7acd8bfae17ff4edbac3437817d6b3fce12a04c4034ac6bef0b1b88f7dcd7c85",
-                          "entropyInputPR" : "47b26bbe93a5cc19a410523a072e04333f06c54af0049fc41e66213763020ef7",
-                          "additionalInput" : "d4b24c74538e3a1083a2cc0a4414a9f558f0a2dc186e3b9a5294cd541acdad87",
-                          "entropyInputPR" : "acb63f3b5995608a1331641cd43208444a9ec95e4bb2a438f614156b6a77c8c3"
+                          "predResistsnceInput" : [
+                             {"additionalInput" : "7acd8bfae17ff4edbac3437817d6b3fce12a04c4034ac6bef0b1b88f7dcd7c85",
+                              "entropyInput" : "47b26bbe93a5cc19a410523a072e04333f06c54af0049fc41e66213763020ef7"},
+                             {"additionalInput" : "d4b24c74538e3a1083a2cc0a4414a9f558f0a2dc186e3b9a5294cd541acdad87",
+                              "entropyInput" : "acb63f3b5995608a1331641cd43208444a9ec95e4bb2a438f614156b6a77c8c3"}
+                          ]
                         }
                       ]
                     }
                   ]
                 }
             </pre>
-<p id="rfc.section.B.p.3">The following is a example JSON object for hashDRBG test vectors sent from the ACVP server to the crypto module.</p>
+<p id="rfc.section.B.p.3">The following is a example JSON object for hashDRBG test vectors sent from the ACVP server to the crypto module. In this example the implementation is tested without additional input and personalization data.</p>
 <pre>
                 {
                   "version": "0.2",
@@ -1417,20 +1425,24 @@
                           "entropyInput":"ae0a3acd541d0d582a8510f3028caa143fe1e5226a8469d40b979d3a0d1bbe69",
                           "nonce":"786f03ad697332d74fad7a14604cee44",
                           "persoString":"",
-                          "additionalInput":"",
-                          "entropyInputPR": "4852aed7c47fd305aa680a6557d2f6e4112342a04eb91ed9f843671d0673cecd",
-                          "additionalInput" : "",
-                          "entropyInputPR" : "8b8a35a12e2d112685258742a9ad81931595fb06a7443329317e4eab9814e888"
+                          "predResistsnceInput" : [
+                               {"additionalInput":"",
+                                "entropyInput": "4852aed7c47fd305aa680a6557d2f6e4112342a04eb91ed9f843671d0673cecd"},
+                               {"additionalInput" : "",
+                                "entropyInput" : "8b8a35a12e2d112685258742a9ad81931595fb06a7443329317e4eab9814e888"}
+                            ]
                           },
                         {
                           "tcId": "2152",
                           "entropyInput" : "26d8c9a9b982cd7016c9208fe95b2f4003e0ebf84c1e80a4087f2bc3e0fc5674",
                           "nonce": "36dff124f908a95a022edf615618cd31",
                           "persoString" : "",
-                          "additionalInput" : "",
-                          "entropyInputPR" : "648bbdc4d40571905c69e7e2b15e36e08c812a6c509cef68bf75281e87f7a154",
-                          "additionalInput" : "",
-                          "entropyInputPR" : "fff51d05b1349506c354a0e6ee01edcff21c509dff5cbb582c8fdc01d6e8bd5b"
+                          "predResistsnceInput" : [
+                             {"additionalInput" : "",
+                              "entropyInput" : "648bbdc4d40571905c69e7e2b15e36e08c812a6c509cef68bf75281e87f7a154"},
+                             {"additionalInput" : "",
+                              "entropyInput" : "fff51d05b1349506c354a0e6ee01edcff21c509dff5cbb582c8fdc01d6e8bd5b"}
+                          ]
                         }
                       ]
                     }
