Updates artifact files for Range JSON

--- a/artifacts/acvp_sub_sha3.html
+++ b/artifacts/acvp_sub_sha3.html
@@ -526,16 +526,9 @@
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">outMinLength</td>
-      <td class="left">Minimum output length for SHAKE</td>
-      <td class="left">value</td>
-      <td class="left">16-65536</td>
-      <td class="left">Required for SHAKE</td>
-    </tr>
-    <tr>
-      <td class="left">outMaxLength</td>
-      <td class="left">Minimum output length for SHAKE</td>
-      <td class="left">value</td>
+      <td class="left">outLength</td>
+      <td class="left">Output length for SHAKE</td>
+      <td class="left">array</td>
       <td class="left">16-65536</td>
       <td class="left">Required for SHAKE</td>
     </tr>
@@ -763,6 +756,21 @@
 }
 
   	            </pre>
+<p id="rfc.section.A.p.2">The following is an example JSON object advertising support for SHAKE-128.</p>
+<pre>
+
+{
+	"algorithm": "SHAKE-128",
+	"inBit": "yes",
+	"inEmpty": "yes",
+	"outBit": "yes",
+	"outLength": {
+		"min": 16,
+		"max": 1024
+	}
+}
+ 	    			
+  	    		</pre>
 <h1 id="rfc.appendix.B"><a href="#rfc.appendix.B">Appendix B.</a> <a href="#app-vs-ex" id="app-vs-ex">Example Test Vectors JSON Object</a></h1>
 <p id="rfc.section.B.p.1">The following is an example JSON object for secure hash test vectors sent from the ACVP server to the crypto module.</p>
 <pre>
