Changes 'montecarlo' to 'MCT'
Artifacts for the change.

--- a/artifacts/acvp_sub_sha.html
+++ b/artifacts/acvp_sub_sha.html
@@ -593,7 +593,7 @@
   <tbody>
     <tr>
       <td class="left">testType</td>
-      <td class="left">Test category type. For Algorithm Functional Tests (also known as short and long message): 'functional'. Or for Monte Carlo: 'montecarlo'.</td>
+      <td class="left">Test category type. For Algorithm Functional Tests (also known as short and long message): 'AFT'. Or for Monte Carlo: 'MCT'.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -613,7 +613,7 @@
       <td class="left">inEmpty</td>
       <td class="left">States that the empty message is included in the group</td>
       <td class="left">value</td>
-      <td class="left">No for functional message tests. Yes for all others.</td>
+      <td class="left">No for Algorithm Functional Tests. Yes for all others.</td>
     </tr>
   </tbody>
 </table>
@@ -745,7 +745,7 @@
   	"algorithm": "SHA-512/224",
   	"testGroups": [
   	{
-  		"testType": "functional",
+  		"testType": "AFT",
   		"tests": [
   		{
   			"tcId": 0,
@@ -769,7 +769,7 @@
   	"algorithm": "SHA-256",
   	"testGroups": [
     {
-      	"testType": "functional",
+      	"testType": "AFT",
       	"tests": [
         {
           	"tcId": 2170,
@@ -793,7 +793,7 @@
     "algorithm": "SHA-1",
     "testGroups": [
     {
-        "testType": "montecarlo",
+        "testType": "MCT",
         "tests": [
         {
             "tcId": 2175,
