--- a/artifacts/acvp_sub_sha3.html
+++ b/artifacts/acvp_sub_sha3.html
@@ -608,7 +608,7 @@
   <tbody>
     <tr>
       <td class="left">testType</td>
-      <td class="left">Test category type. For Algorithm Functional Tests (also known as short and long message): 'functional'. Or for Monte Carlo: 'montecarlo'. An option for SHAKE only is 'variable'.</td>
+      <td class="left">Test category type. For Algorithm Functional Tests (also known as short and long message): 'AFT'. Or for Monte Carlo: 'MCT'. An option for SHAKE only is 'variable'.</td>
       <td class="left">value</td>
       <td class="left">No</td>
     </tr>
@@ -628,7 +628,7 @@
       <td class="left">inEmpty</td>
       <td class="left">States that the empty message is included in the group</td>
       <td class="left">yes, no</td>
-      <td class="left">No for functional tests. Yes for all others.</td>
+      <td class="left">No for Algorithm Functional Tests. Yes for all others.</td>
     </tr>
   </tbody>
 </table>
@@ -781,7 +781,7 @@
   	"algorithm": "SHA3-512",
   	"testGroups": [
   	{
-  		"testType": "functional",
+  		"testType": "AFT",
   		"tests": [
   		{
   			"tcId": 0,
@@ -805,7 +805,7 @@
   	"algorithm": "SHA3-256",
   	"testGroups": [
     {
-      	"testType": "functional",
+      	"testType": "AFT",
       	"tests": [
         {
           	"tcId": 2170,
@@ -829,7 +829,7 @@
     "algorithm": "SHA3-384",
     "testGroups": [
     {
-        "testType": "montecarlo",
+        "testType": "MCT",
         "tests": [
         {
             "tcId": 2175,
